--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
             <div class="header__line"></div>
         </header>
         <main class="content">
-
+            <section class="profile">
+                <img src="./images/ZakIvKusto.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
+                <div class="profile__info">
+                    <h1 class="profile__name">Жак-Ив Кусто<button class="profile__edit-button"></button></h1>
+                    <p class="profile__text">Исследователь океана</p>
+                </div>
+                <button class="profile__add-button"></button>
+            </section>
+            <section class="elements">
+                <div class="element">
+                    <img src="" class="element__image" alt="">
+                    <div class="element__info">
+                        <p class="element__text"></p>
+                        <button class="element__like-button"></button>
+                    </div> 
+                </div>
+            </section>
         </main>    
         <footer class="footer">
 
