--- a/index.html
+++ b/index.html
@@ -23,10 +23,45 @@
             </section>
             <section class="elements">
                 <div class="element">
-                    <img src="" class="element__image" alt="">
+                    <img src="./images/karachaevsk.jpg" class="element__image" alt="Карачаевск">
                     <div class="element__info">
-                        <p class="element__text"></p>
-                        <button class="element__like-button"></button>
+                        <p class="element__text">Карачаевск</p>
+                        <button class="element__like-buttom"></button>
+                    </div> 
+                </div>
+                <div class="element">
+                    <img src="./images/mount-elbrus.jpg" class="element__image" alt="Горы Эльбрус">
+                    <div class="element__info">
+                        <p class="element__text">Горы Эльбрус</p>
+                        <button class="element__like-buttom"></button>
+                    </div> 
+                </div>
+                <div class="element">
+                    <img src="./images/dombay.png" class="element__image" alt="Домбай">
+                    <div class="element__info">
+                        <p class="element__text">Домбай</p>
+                        <button class="element__like-buttom"></button>
+                    </div> 
+                </div>
+                <div class="element">
+                    <img src="./images/mount-elbrus.jpg" class="element__image" alt="Горы Эльбрус">
+                    <div class="element__info">
+                        <p class="element__text">Горы Эльбрус</p>
+                        <button class="element__like-buttom"></button>
+                    </div> 
+                </div>
+                <div class="element">
+                    <img src="./images/dombay.png" class="element__image" alt="Домбай">
+                    <div class="element__info">
+                        <p class="element__text">Домбай</p>
+                        <button class="element__like-buttom"></button>
+                    </div> 
+                </div>
+                <div class="element">
+                    <img src="./images/karachaevsk.jpg" class="element__image" alt="Карачаевск">
+                    <div class="element__info">
+                        <p class="element__text">Карачаевск</p>
+                        <button class="element__like-buttom"></button>
                     </div> 
                 </div>
             </section>
