--- a/index.html
+++ b/index.html
@@ -67,9 +67,24 @@
             </section>
         </main>    
         <footer class="footer">
-
+            <p class="footer__copyright">
+                &copy; 2021 Mesto Russia
+            </p>
         </footer>
+        <div class="popup">
+            <div class="popup__content">
+                <svg  class="popup__close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M20 18L12 10L20 2L18 0L10 8L2 0L0 2L8 10L0 18L2 20L10 12L18 20L20 18Z" fill="white"/>
+                </svg>
+                <h3 class="popup__title">Редактировать профиль</h3>
+                <form class="popup__form">
+                    <input class="popup__input popup__input_name" type="text" value="1">
+                    <input class="popup__input popup__input_work" type="text">
+                    <button class="popup__save-button" type="submit">Сохранить</button>
+                </form>
+            </div>
+        </div>
     </div>    
-    <script src ="./index.js"></script>    
+    <script src ="./scripts/index.js"></script>    
 </body>
 </html>
