--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
         </footer>
         <div class="popup">
             <div class="popup__content">
-                <svg class="popup__close" width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20 18L12 10L20 2L18 0L10 8L2 0L0 2L8 10L0 18L2 20L10 12L18 20L20 18Z" fill="white"/>
-                </svg>
+                <button class="popup__close"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form class="popup__form popup__form_edit">
                     <input class="popup__input popup__input_name" type="text" value="Жак-Ив Кусто">
