--- a/index.html
+++ b/index.html
@@ -10,59 +10,58 @@
     <div class="page">
         <header class="header">
             <div class="header__logo"></div>
-            <div class="header__line"></div>
         </header>
         <main class="content">
             <section class="profile">
                 <img src="./images/ZakIvKusto.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
                 <div class="profile__info">
-                    <h1 class="profile__name profile__name_edit">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button profile__edit-button_active"></button>
-                    <p class="profile__text profile__text_edit">Исследователь океана</p>
+                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <button class="profile__edit-button" type="button"></button>
+                    <p class="profile__text">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button"></button>
+                <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements">
                 <div class="element">
                     <img src="./images/karachaevsk.jpg" class="element__image" alt="Карачаевск">
                     <div class="element__info">
-                        <p class="element__text">Карачаевск</p>
-                        <button class="element__like-buttom"></button>
+                        <h2 class="element__text">Карачаевск</h2>
+                        <button class="element__like-button" type="button"></button>
                     </div> 
                 </div>
                 <div class="element">
                     <img src="./images/mount-elbrus.jpg" class="element__image" alt="Горы Эльбрус">
                     <div class="element__info">
-                        <p class="element__text">Горы Эльбрус</p>
-                        <button class="element__like-buttom"></button>
+                        <h2 class="element__text">Горы Эльбрус</h2>
+                        <button class="element__like-button" type="button"></button>
                     </div> 
                 </div>
                 <div class="element">
                     <img src="./images/dombay.png" class="element__image" alt="Домбай">
                     <div class="element__info">
-                        <p class="element__text">Домбай</p>
-                        <button class="element__like-buttom"></button>
+                        <h2 class="element__text">Домбай</h2>
+                        <button class="element__like-button" type="button"></button>
                     </div> 
                 </div>
                 <div class="element">
                     <img src="./images/mount-elbrus.jpg" class="element__image" alt="Горы Эльбрус">
                     <div class="element__info">
-                        <p class="element__text">Горы Эльбрус</p>
-                        <button class="element__like-buttom"></button>
+                        <h2 class="element__text">Горы Эльбрус</h2>
+                        <button class="element__like-button" type="button"></button>
                     </div> 
                 </div>
                 <div class="element">
                     <img src="./images/dombay.png" class="element__image" alt="Домбай">
                     <div class="element__info">
-                        <p class="element__text">Домбай</p>
-                        <button class="element__like-buttom"></button>
+                        <h2 class="element__text">Домбай</h2>
+                        <button class="element__like-button" type="button"></button>
                     </div> 
                 </div>
                 <div class="element">
                     <img src="./images/karachaevsk.jpg" class="element__image" alt="Карачаевск">
                     <div class="element__info">
-                        <p class="element__text">Карачаевск</p>
-                        <button class="element__like-buttom"></button>
+                        <h2 class="element__text">Карачаевск</h2>
+                        <button class="element__like-button" type="button"></button>
                     </div> 
                 </div>
             </section>
@@ -74,12 +73,12 @@
         </footer>
         <div class="popup">
             <div class="popup__content">
-                <button class="popup__close"></button>
-                <h3 class="popup__title">Редактировать профиль</h3>
-                <form class="popup__form popup__form_edit">
-                    <input class="popup__input popup__input_name" type="text" value="Жак-Ив Кусто">
-                    <input class="popup__input popup__input_work" type="text" value="Исследователь океана">
-                    <button class="popup__save-button popup__save-button_active" type="submit">Сохранить</button>
+                <button class="popup__close" type="button"></button>
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <form class="popup__form" name="form">
+                    <input class="popup__input popup__input_type_name" type="text" name ="name" value="Жак-Ив Кусто">
+                    <input class="popup__input popup__input_type_work" type="text" name ="work" value="Исследователь океана">
+                    <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
