--- a/index.html
+++ b/index.html
@@ -22,50 +22,19 @@
                 <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements">
-                <div class="element">
-                    <img src="./images/karachaevsk.jpg" class="element__image" alt="Карачаевск">
-                    <div class="element__info">
-                        <h2 class="element__text">Карачаевск</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div> 
-                </div>
-                <div class="element">
-                    <img src="./images/mount-elbrus.jpg" class="element__image" alt="Горы Эльбрус">
-                    <div class="element__info">
-                        <h2 class="element__text">Горы Эльбрус</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div> 
-                </div>
-                <div class="element">
-                    <img src="./images/dombay.png" class="element__image" alt="Домбай">
-                    <div class="element__info">
-                        <h2 class="element__text">Домбай</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div> 
-                </div>
-                <div class="element">
-                    <img src="./images/mount-elbrus.jpg" class="element__image" alt="Горы Эльбрус">
-                    <div class="element__info">
-                        <h2 class="element__text">Горы Эльбрус</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div> 
-                </div>
-                <div class="element">
-                    <img src="./images/dombay.png" class="element__image" alt="Домбай">
-                    <div class="element__info">
-                        <h2 class="element__text">Домбай</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div> 
-                </div>
-                <div class="element">
-                    <img src="./images/karachaevsk.jpg" class="element__image" alt="Карачаевск">
-                    <div class="element__info">
-                        <h2 class="element__text">Карачаевск</h2>
-                        <button class="element__like-button" type="button"></button>
-                    </div> 
-                </div>
+             
             </section>
         </main>    
+        <template id="template-elements">
+            <div class="element">
+                <img src="" class="element__image" alt ="Изображение">
+                <button class="element__trash" type ="button"></button>
+                <div class="element__info">
+                    <h2 class="element__text"></h2>
+                    <button class="element__like-button" type ="button"></button>
+                </div>
+            </div>
+        </template>
         <footer class="footer">
             <p class="footer__copyright">
                 &copy; 2021 Mesto Russia
@@ -80,6 +49,24 @@
                     <input class="popup__input popup__input_type_work" type="text" name ="work" value="Исследователь океана">
                     <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
+            </div>
+        </div>
+        <div class="popup popup__addItem">
+            <div class="popup__content">
+                <button class="popup__close popup__close_addItem" type="button"></button>
+                <h2 class="popup__title">Новое место</h2>
+                <form class="popup__form popup__form-image" name="form">
+                    <input class="popup__input popup__input_type_text" type="text" name ="name-image" placeholder="название">
+                    <input class="popup__input popup__input_type_image" type="text" name ="image" placeholder="ссылка на картинку">
+                    <button class="popup__save-button popup-addImage" type="submit">Сохранить</button>
+                </form>
+            </div>
+        </div>    
+        <div class="popup popup__img">
+            <div class="popup__img-container">
+                <button class="popup__close popup__close_img" type="button"></button>
+                <img src="" class="popup__img-element" alt = "Картинка">
+                <P class="popup__img-text"></P>
             </div>
         </div>
     </div>    
