--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </main>    
         <template id="template-elements">
             <div class="element">
-                <img src="" class="element__image" alt ="Изображение">
+                <img src="#" class="element__image" alt ="Изображение">
                 <button class="element__trash" type ="button"></button>
                 <div class="element__info">
                     <h2 class="element__text"></h2>
@@ -65,8 +65,8 @@
         <div class="popup popup__img">
             <div class="popup__img-container">
                 <button class="popup__close popup__close_img" type="button"></button>
-                <img src="" class="popup__img-element" alt = "Картинка">
-                <P class="popup__img-text"></P>
+                <img src="#" class="popup__img-element" alt = "Картинка">
+                <p class="popup__img-text"></p>
             </div>
         </div>
     </div>    
