--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__addItem">
+        <div class="popup popup_additem">
             <div class="popup__content">
                 <button class="popup__close popup__close_addItem" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
@@ -62,7 +62,7 @@
                 </form>
             </div>
         </div>    
-        <div class="popup popup__img">
+        <div class="popup popup_img">
             <div class="popup__img-container">
                 <button class="popup__close popup__close_img" type="button"></button>
                 <img src="#" class="popup__img-element" alt = "Картинка">
