--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </main>    
         <template id="template-elements">
             <div class="element">
-                <img src="#" class="element__image" alt ="Изображение">
+                <img src="#" class="element__image" alt ="">
                 <button class="element__trash" type ="button"></button>
                 <div class="element__info">
                     <h2 class="element__text"></h2>
@@ -40,7 +40,7 @@
                 &copy; 2021 Mesto Russia
             </p>
         </footer>
-        <div class="popup">
+        <div class="popup popup_profile">
             <div class="popup__content">
                 <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
@@ -65,7 +65,7 @@
         <div class="popup popup_img">
             <div class="popup__img-container">
                 <button class="popup__close popup__close_img" type="button"></button>
-                <img src="#" class="popup__img-element" alt = "Картинка">
+                <img src="#" class="popup__img-element" alt = "">
                 <p class="popup__img-text"></p>
             </div>
         </div>
