--- a/index.html
+++ b/index.html
@@ -41,28 +41,35 @@
             </p>
         </footer>
         <div class="popup popup_profile">
+            <div class="popup__overlay popup__overlay_profile"></div>
             <div class="popup__content">
                 <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form" name="form">
-                    <input class="popup__input popup__input_type_name" type="text" name ="name" value="Жак-Ив Кусто">
-                    <input class="popup__input popup__input_type_work" type="text" name ="work" value="Исследователь океана">
-                    <button class="popup__save-button" type="submit">Сохранить</button>
+                <form class="popup__form popup__form-profile" name="form" novalidate>
+                    <input class="popup__input popup__input_type_name" id ="name" type="text" name ="name" value="Жак-Ив Кусто" minlength="2" maxlength="40" required>
+                    <span class="popup__error" id="name-error"></span>
+                    <input class="popup__input popup__input_type_work" id="job" type="text" name ="work" value="Исследователь океана" minlength="2" maxlength="200" required>
+                    <span class="popup__error" id="job-error"></span>
+                    <button class="popup__save-button popup__save-buton_profile" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
         <div class="popup popup_additem">
+            <div class="popup__overlay popup__overlay_additem"></div>
             <div class="popup__content">
                 <button class="popup__close popup__close_addItem" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form class="popup__form popup__form-image" name="form">
-                    <input class="popup__input popup__input_type_text" type="text" name ="name-image" placeholder="название">
-                    <input class="popup__input popup__input_type_image" type="text" name ="image" placeholder="ссылка на картинку">
+                <form class="popup__form popup__form-image" name="form" novalidate>
+                    <input class="popup__input popup__input_type_text" id="name_image" type="text" name ="name-image" placeholder="название" minlength="2" maxlength="30" required>
+                    <span class="popup__error" id="name_image-error"></span>
+                    <input class="popup__input popup__input_type_image" id="image" type="url" name ="image" placeholder="ссылка на картинку" required>
+                    <span class="popup__error" id="image-error"></span>
                     <button class="popup__save-button popup-addImage" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>    
         <div class="popup popup_img">
+            <div class="popup__overlay popup__overlay_img"></div>
             <div class="popup__img-container">
                 <button class="popup__close popup__close_img" type="button"></button>
                 <img src="#" class="popup__img-element" alt = "">
@@ -70,6 +77,7 @@
             </div>
         </div>
     </div>    
-    <script src ="./scripts/index.js"></script>    
+    <script src ="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>    
 </body>
 </html>
