--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="popup__error" id="name-error"></span>
                     <input class="popup__input popup__input_type_work" id="job" type="text" name ="work" value="Исследователь океана" minlength="2" maxlength="200" required>
                     <span class="popup__error" id="job-error"></span>
-                    <button class="popup__save-button popup__save-buton_profile" type="submit">Сохранить</button>
+                    <button class="popup__save-button popup__button_profile" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
