--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form popup__form-profile" name="form" novalidate>
-                    <input class="popup__input popup__input_type_name" id ="name" type="text" name ="name" value="Жак-Ив Кусто" minlength="2" maxlength="40" required>
+                    <input class="popup__input popup__input_type_name" id ="name" type="text" name ="name" value="Жак-Ив Кусто" placeholder="имя" minlength="2" maxlength="40" required>
                     <span class="popup__error" id="name-error"></span>
-                    <input class="popup__input popup__input_type_work" id="job" type="text" name ="work" value="Исследователь океана" minlength="2" maxlength="200" required>
+                    <input class="popup__input popup__input_type_work" id="job" type="text" name ="work" value="Исследователь океана" placeholder="вид деятельности" minlength="2" maxlength="200" required>
                     <span class="popup__error" id="job-error"></span>
                     <button class="popup__save-button popup-addInfoInProfile" type="submit">Сохранить</button>
                 </form>
