--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </footer>
         <div class="popup popup_profile">
             <div class="popup__overlay popup__overlay_profile"></div>
-            <div class="popup__content">
+            <div class="popup__content popup__close_by_overlay">
                 <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form popup__form-profile" name="form" novalidate>
@@ -56,7 +56,7 @@
         </div>
         <div class="popup popup_additem">
             <div class="popup__overlay popup__overlay_additem"></div>
-            <div class="popup__content">
+            <div class="popup__content popup__close_by_overlay">
                 <button class="popup__close popup__close_addItem" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
                 <form class="popup__form popup__form-image" name="form" novalidate>
@@ -70,7 +70,7 @@
         </div>    
         <div class="popup popup_img">
             <div class="popup__overlay popup__overlay_img"></div>
-            <div class="popup__img-container">
+            <div class="popup__img-container popup__close_by_overlay">
                 <button class="popup__close popup__close_img" type="button"></button>
                 <img src="#" class="popup__img-element" alt = "">
                 <p class="popup__img-text"></p>
