--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img src="./images/ZakIvKusto.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
+                <img src="<%=require('./images/ZakIvKusto.jpg')%>" alt="Жак-Ив Кусто" class="profile__avatar">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__edit-button" type="button"></button>
@@ -76,7 +75,6 @@
                 <p class="popup__img-text"></p>
             </div>
         </div>
-    </div>    
-    <script  type = 'module'  src ="./scripts/index.js"></script>  
+    </div>
 </body>
 </html>
