--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
             </p>
         </footer>
         <div class="popup popup_profile">
-            <div class="popup__overlay popup__overlay_profile"></div>
-            <div class="popup__content popup__content_closebyoverlay">
+            <div class="popup__overlay"></div>
+            <div class="popup__content">
                 <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form popup__form-profile" name="form" novalidate>
@@ -54,8 +54,8 @@
             </div>
         </div>
         <div class="popup popup_additem">
-            <div class="popup__overlay popup__overlay_additem"></div>
-            <div class="popup__content popup__content_closebyoverlay">
+            <div class="popup__overlay"></div>
+            <div class="popup__content">
                 <button class="popup__close popup__close_addItem" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
                 <form class="popup__form popup__form-image" name="form" novalidate>
@@ -68,8 +68,8 @@
             </div>
         </div>    
         <div class="popup popup_img">
-            <div class="popup__overlay popup__overlay_img"></div>
-            <div class="popup__img-container popup__img-container_closebyoverlay">
+            <div class="popup__overlay"></div>
+            <div class="popup__img-container">
                 <button class="popup__close popup__close_img" type="button"></button>
                 <img src="#" class="popup__img-element" alt = "">
                 <p class="popup__img-text"></p>
