--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
         <main class="content">
             <section class="profile">
                 <img src="<%=require('./images/ZakIvKusto.jpg')%>" alt="Жак-Ив Кусто" class="profile__avatar">
+                <div class ="profile__avatar-button">
+                    <div class ="profile__edit-avatar"></div>
+                </div>>
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__edit-button" type="button"></button>
@@ -30,7 +33,10 @@
                 <button class="element__trash" type ="button"></button>
                 <div class="element__info">
                     <h2 class="element__text"></h2>
-                    <button class="element__like-button" type ="button"></button>
+                    <div class = "element__like">
+                        <button class="element__like-button" type ="button"></button>
+                        <h3 class = "element__number"></h3>
+                    </div>
                 </div>
             </div>
         </template>
@@ -75,6 +81,16 @@
                 <p class="popup__img-text"></p>
             </div>
         </div>
+        <div class="popup popup_delete">
+            <div class="popup__overlay"></div>
+            <div class="popup__content">
+                <button class="popup__close popup__close_addItem" type="button"></button>
+                <h2 class="popup__title">Вы уверены?</h2>
+                <form class="popup__form popup__form-image" name="form" novalidate>
+                    <button class="popup__save-button popup-addImage" type="submit">Да</button>
+                </form>
+            </div>
+        </div>    
     </div>
 </body>
 </html>
