--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img src="<%=require('./images/ZakIvKusto.jpg')%>" alt="Жак-Ив Кусто" class="profile__avatar">
-                <div class ="profile__avatar-button">
-                    <div class ="profile__edit-avatar"></div>
-                </div>>
+                <div class = "profile__avatar-button"> 
+                    <img src="<%=require('./images/ZakIvKusto.jpg')%>" alt="Жак-Ив Кусто" class="profile__avatar">
+                    <div class = "profile__edit-avatar"></div>
+                </div>
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__edit-button" type="button"></button>
@@ -90,7 +90,21 @@
                     <button class="popup__save-button popup-addImage" type="submit">Да</button>
                 </form>
             </div>
+        </div>
+
+        <div class="popup popup_avatar">
+            <div class="popup__overlay"></div>
+            <div class="popup__content">
+                <button class="popup__close popup__close_addItem" type="button"></button>
+                <h2 class="popup__title">Обновить аватар</h2>
+                <form class="popup__form popup__form-avatar" name="form" novalidate>
+                    <input class="popup__input popup__input_type_avatar" id="image" type="url" name ="image" placeholder="ссылка на новый аватар" required>
+                    <span class="popup__error" id="image-error"></span>
+                    <button class="popup__save-button popup-addImage" type="submit">Сохранить</button>
+                </form>
+            </div>
         </div>    
+
     </div>
 </body>
 </html>
