--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <main class="content">
             <section class="profile">
                 <div class = "profile__avatar-button"> 
-                    <img src="" alt="Аватар" class="profile__avatar">
+                    <img alt="Аватар" class="profile__avatar">
                     <div class = "profile__edit-avatar"></div>
                 </div>
                 <div class="profile__info">
@@ -97,8 +97,8 @@
                 <button class="popup__close popup__close_addItem" type="button"></button>
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form class="popup__form popup__form-avatar" name="form" novalidate>
-                    <input class="popup__input popup__input_type_avatar" id="image" type="url" name ="image" placeholder="ссылка на новый аватар" required>
-                    <span class="popup__error" id="image-error"></span>
+                    <input class="popup__input popup__input_type_avatar" id="avatar-image" type="url" name ="image" placeholder="ссылка на новый аватар" required>
+                    <span class="popup__error" id="avatar-image-error"></span>
                     <button class="popup__save-button popup-addImage" type="submit">Сохранить</button>
                 </form>
             </div>
